# learning-agent

./: .gitignore  README.md
projects/01-travel-assistant/: .env.example  README.md  pyproject.toml  requirements.txt
projects/01-travel-assistant/scripts/: bootstrap_venv.sh
projects/01-travel-assistant/src/travel_assistant/: __init__.py  __main__.py  agent.py  env.py  llm.py  prompts.py  tools.py
projects/01-travel-assistant/src/travel_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
